# costguard

./: .gitignore  Dockerfile  pyproject.toml  render.yaml  start.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/pages/: Agents.jsx  Alerts.jsx  Dashboard.jsx  Landing.jsx  Pricing.jsx
src/costguard/: __init__.py  api.py  billing.py  cli.py  database.py  engine.py  integrations.py  middleware.py  models.py  predictor.py  pricing.py  sdk.py  store.py
