[project]
name = "costguard"
version = "0.1.0"
description = "AI Agent Cost Guard — real-time cost monitoring and circuit breakers for AI agents"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]

[project.scripts]
costguard = "costguard.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
